--- a/TODO
+++ b/TODO
@@ -2,5 +2,7 @@
 
 - Ondezoek welk AC signaal beter is. (mijn timer ac signaal of adafruit ac signaal)
 
+- Fix interrupt code werkt alleen op interrupt GPIOA_0, de rest is niet getest
+
 - Fix the clock generation function
     - zorg dat die functie een klok van 16-48MHZ kan maken, precieze frequentie maakt niet zo veel uit
